--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.15",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "expo": "~49.0.13",
     "expo-constants": "~14.4.2",
@@ -18,7 +20,9 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-webview": "13.2.2",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
